--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,9 @@ body, html {
     color: #777;
     line-height: 1.8;
 }
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v14/S6uyw4BMUTPHjx4wWw.ttf) format('truetype');
+}
