--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
 body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif;
 }
-#read {display:none;}
+#more {display:none;}
 body, html {
     height: 100%;
     color: #777;
