--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: "Lato", sans-serif;
 }
 #more {display:none;}
+#more2 {display:none;}
 body, html {
     height: 100%;
     color: #777;
